--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.12",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
